examples/test/testpolicy12934.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12934
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key10: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value40
          key49: value47
          key42: value29
      podSelector:
        matchLabels:
          key4: value47
          key24: value32
